--- a/page.html
+++ b/page.html
@@ -10,7 +10,12 @@
         <h4>App Academy Students</h4>
         <nav>
           <ul>
-            <li>Home</li><li id="notifications">Notifications <span id="notification-num">3</span></li><li>Messages</li><li>Settings</li>
+            <li>Home</li><li id="notifications">Notifications <span id="notification-num">3</span>      <ul id="drop-down">
+        <li>Someone liked your picture.</li>
+        <li>You have a new friend request.</li>
+        <li>Welcome to App Academy.</li>
+      </ul></li><li>Messages</li><li>Settings</li>
+          
           </ul>
         </nav>
       </div>
